--- a/src/main/web/main.xhtml
+++ b/src/main/web/main.xhtml
@@ -22,12 +22,14 @@
 
     <p class="logo l4"><strong>Текущее время</strong>: <span id="currentTime" /></p>
 
-    <h:link value="" outcome="index">
-        <h:graphicImage id="rotate1" style="float: right; margin: 50px; width:300px;" value="koshki6.gif">
+    <h:link value="на основную страницу" outcome="index">
 
-            <![CDATA[ ]]>
-        </h:graphicImage>
     </h:link>
+
+    <h:graphicImage id="rotate1" style="float: right; margin: 50px; width:300px;" value="koshki6.gif">
+
+        <![CDATA[ ]]>
+    </h:graphicImage>
 
     <h:outputScript library="default" name="js/clock.js" />
 </h:body>
